--- a/amp-appointment-form/style.css
+++ b/amp-appointment-form/style.css
@@ -86,7 +86,8 @@ input[type="submit"]:hover {
 }
 
 input[type="submit"]:disabled {
-  background-color: #f9b25b;
+  background-color: #ff8c00;
+  opacity: ".65";
 }
 
 .forms-req-symbol {
